kivy/graphics/c_opengl.pxd


    cdef void   glActiveTexture(GLenum texture) nogil
    cdef void   glAttachShader(GLuint program, GLuint shader) nogil
    cdef void   glBindAttribLocation(GLuint program, GLuint index,  GLchar* name) nogil
    cdef void   glBindBuffer(GLenum target, GLuint buffer) nogil
    cdef void   glBindFramebuffer(GLenum target, GLuint framebuffer) nogil
    cdef void   glBindRenderbuffer(GLenum target, GLuint renderbuffer) nogil
    cdef void   glBindTexture(GLenum target, GLuint texture) nogil
    cdef void   glBlendColor(GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha) nogil
    cdef void   glBlendEquation( GLenum mode ) nogil
    cdef void   glBlendEquationSeparate(GLenum modeRGB, GLenum modeAlpha) nogil
    cdef void   glBlendFunc(GLenum sfactor, GLenum dfactor) nogil
    cdef void   glBlendFuncSeparate(GLenum srcRGB, GLenum dstRGB, GLenum srcAlpha, GLenum dstAlpha) nogil
    cdef void   glBufferData(GLenum target, GLsizeiptr size,  GLvoid* data, GLenum usage) nogil
    cdef void   glBufferSubData(GLenum target, GLintptr offset, GLsizeiptr size,  GLvoid* data) nogil
    cdef GLenum glCheckFramebufferStatus(GLenum target) nogil
    cdef void   glClear(GLbitfield mask) nogil
    cdef void   glClearColor(GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha) nogil
    cdef void   glClearDepthf(GLclampf depth) nogil
    cdef void   glClearStencil(GLint s) nogil
    cdef void   glColorMask(GLboolean red, GLboolean green, GLboolean blue, GLboolean alpha) nogil
    cdef void   glCompileShader(GLuint shader) nogil
    cdef void   glCompressedTexImage2D(GLenum target, GLint level, GLenum internalformat, GLsizei width, GLsizei height, GLint border, GLsizei imageSize,  GLvoid* data) nogil
    cdef void   glCompressedTexSubImage2D(GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLsizei imageSize,  GLvoid* data) nogil
    cdef void   glCopyTexImage2D(GLenum target, GLint level, GLenum internalformat, GLint x, GLint y, GLsizei width, GLsizei height, GLint border) nogil
    cdef void   glCopyTexSubImage2D(GLenum target, GLint level, GLint xoffset, GLint yoffset, GLint x, GLint y, GLsizei width, GLsizei height) nogil
    cdef GLuint glCreateProgram() nogil
    cdef GLuint glCreateShader(GLenum type) nogil
    cdef void   glCullFace(GLenum mode) nogil
    cdef void   glDeleteBuffers(GLsizei n,  GLuint* buffers) nogil
    cdef void   glDeleteFramebuffers(GLsizei n,  GLuint* framebuffers) nogil
    cdef void   glDeleteProgram(GLuint program) nogil
    cdef void   glDeleteRenderbuffers(GLsizei n,  GLuint* renderbuffers) nogil
    cdef void   glDeleteShader(GLuint shader) nogil
    cdef void   glDeleteTextures(GLsizei n,  GLuint* textures) nogil
    cdef void   glDepthFunc(GLenum func) nogil
    cdef void   glDepthMask(GLboolean flag) nogil
    cdef void   glDepthRangef(GLclampf zNear, GLclampf zFar) nogil
    cdef void   glDetachShader(GLuint program, GLuint shader) nogil
    cdef void   glDisable(GLenum cap) nogil
    cdef void   glDisableVertexAttribArray(GLuint index) nogil
    cdef void   glDrawArrays(GLenum mode, GLint first, GLsizei count) nogil
    cdef void   glDrawElements(GLenum mode, GLsizei count, GLenum type,  GLvoid* indices) nogil
    cdef void   glEnable(GLenum cap) nogil
    cdef void   glEnableVertexAttribArray(GLuint index) nogil
    cdef void   glFinish() nogil
    cdef void   glFlush() nogil
    cdef void   glFramebufferRenderbuffer(GLenum target, GLenum attachment, GLenum renderbuffertarget, GLuint renderbuffer) nogil
    cdef void   glFramebufferTexture2D(GLenum target, GLenum attachment, GLenum textarget, GLuint texture, GLint level) nogil
    cdef void   glFrontFace(GLenum mode) nogil
    cdef void   glGenBuffers(GLsizei n, GLuint* buffers) nogil
    cdef void   glGenerateMipmap(GLenum target) nogil
    cdef void   glGenFramebuffers(GLsizei n, GLuint* framebuffers) nogil
    cdef void   glGenRenderbuffers(GLsizei n, GLuint* renderbuffers) nogil
    cdef void   glGenTextures(GLsizei n, GLuint* textures) nogil
    cdef void   glGetActiveAttrib(GLuint program, GLuint index, GLsizei bufsize, GLsizei* length, GLint* size, GLenum* type, GLchar* name) nogil
    cdef void   glGetActiveUniform(GLuint program, GLuint index, GLsizei bufsize, GLsizei* length, GLint* size, GLenum* type, GLchar* name) nogil
    cdef void   glGetAttachedShaders(GLuint program, GLsizei maxcount, GLsizei* count, GLuint* shaders) nogil
    cdef int    glGetAttribLocation(GLuint program,  GLchar* name) nogil
    cdef void   glGetBooleanv(GLenum pname, GLboolean* params) nogil
    cdef void   glGetBufferParameteriv(GLenum target, GLenum pname, GLint* params) nogil
    cdef GLenum glGetError() nogil
    cdef void   glGetFloatv(GLenum pname, GLfloat* params) nogil
    cdef void   glGetFramebufferAttachmentParameteriv(GLenum target, GLenum attachment, GLenum pname, GLint* params) nogil
    cdef void   glGetIntegerv(GLenum pname, GLint* params) nogil
    cdef void   glGetProgramiv(GLuint program, GLenum pname, GLint* params) nogil
    cdef void   glGetProgramInfoLog(GLuint program, GLsizei bufsize, GLsizei* length, GLchar* infolog) nogil
    cdef void   glGetRenderbufferParameteriv(GLenum target, GLenum pname, GLint* params) nogil
    cdef void   glGetShaderiv(GLuint shader, GLenum pname, GLint* params) nogil
    cdef void   glGetShaderInfoLog(GLuint shader, GLsizei bufsize, GLsizei* length, GLchar* infolog) nogil
    #cdef void   glGetShaderPrecisionFormat(GLenum shadertype, GLenum precisiontype, GLint* range, GLint* precision) nogil
    cdef void   glGetShaderSource(GLuint shader, GLsizei bufsize, GLsizei* length, GLchar* source) nogil
    cdef   GLubyte*  glGetString(GLenum name) nogil
    cdef void   glGetTexParameterfv(GLenum target, GLenum pname, GLfloat* params) nogil
    cdef void   glGetTexParameteriv(GLenum target, GLenum pname, GLint* params) nogil
    cdef void   glGetUniformfv(GLuint program, GLint location, GLfloat* params) nogil
    cdef void   glGetUniformiv(GLuint program, GLint location, GLint* params) nogil
    cdef int    glGetUniformLocation(GLuint program,  GLchar* name) nogil
    cdef void   glGetVertexAttribfv(GLuint index, GLenum pname, GLfloat* params) nogil
    cdef void   glGetVertexAttribiv(GLuint index, GLenum pname, GLint* params) nogil
    cdef void   glGetVertexAttribPointerv(GLuint index, GLenum pname, GLvoid** pointer) nogil
    cdef void   glHint(GLenum target, GLenum mode) nogil
    cdef GLboolean  glIsBuffer(GLuint buffer) nogil
    cdef GLboolean  glIsEnabled(GLenum cap) nogil
    cdef GLboolean  glIsFramebuffer(GLuint framebuffer) nogil
    cdef GLboolean  glIsProgram(GLuint program) nogil
    cdef GLboolean  glIsRenderbuffer(GLuint renderbuffer) nogil
    cdef GLboolean  glIsShader(GLuint shader) nogil
    cdef GLboolean  glIsTexture(GLuint texture) nogil
    cdef void  glLineWidth(GLfloat width) nogil
    cdef void  glLinkProgram(GLuint program) nogil
    cdef void  glPixelStorei(GLenum pname, GLint param) nogil
    cdef void  glPolygonOffset(GLfloat factor, GLfloat units) nogil
    cdef void  glReadPixels(GLint x, GLint y, GLsizei width, GLsizei height, GLenum format, GLenum type, GLvoid* pixels) nogil
    # XXX This one is commented out because a) it's not necessary and
    #	    				b) it's breaking on OSX for some reason
    #cdef void  glReleaseShaderCompiler() nogil
    cdef void  glRenderbufferStorage(GLenum target, GLenum internalformat, GLsizei width, GLsizei height) nogil
    cdef void  glSampleCoverage(GLclampf value, GLboolean invert) nogil
    cdef void  glScissor(GLint x, GLint y, GLsizei width, GLsizei height) nogil
    #cdef void  glShaderBinary(GLsizei n,  GLuint* shaders, GLenum binaryformat,  GLvoid* binary, GLsizei length) nogil
    cdef void  glShaderSource(GLuint shader, GLsizei count,  GLchar** string,  GLint* length) nogil
    cdef void  glStencilFunc(GLenum func, GLint ref, GLuint mask) nogil
    cdef void  glStencilFuncSeparate(GLenum face, GLenum func, GLint ref, GLuint mask) nogil
    cdef void  glStencilMask(GLuint mask) nogil
    cdef void  glStencilMaskSeparate(GLenum face, GLuint mask) nogil
    cdef void  glStencilOp(GLenum fail, GLenum zfail, GLenum zpass) nogil
    cdef void  glStencilOpSeparate(GLenum face, GLenum fail, GLenum zfail, GLenum zpass) nogil
    cdef void  glTexImage2D(GLenum target, GLint level, GLint internalformat, GLsizei width, GLsizei height, GLint border, GLenum format, GLenum type,  GLvoid* pixels) nogil
    cdef void  glTexParameterf(GLenum target, GLenum pname, GLfloat param) nogil
    cdef void  glTexParameterfv(GLenum target, GLenum pname,  GLfloat* params) nogil
    cdef void  glTexParameteri(GLenum target, GLenum pname, GLint param) nogil
    cdef void  glTexParameteriv(GLenum target, GLenum pname,  GLint* params) nogil
    cdef void  glTexSubImage2D(GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLenum type,  GLvoid* pixels) nogil
    cdef void  glUniform1f(GLint location, GLfloat x) nogil
    cdef void  glUniform1fv(GLint location, GLsizei count,  GLfloat* v) nogil
    cdef void  glUniform1i(GLint location, GLint x) nogil
    cdef void  glUniform1iv(GLint location, GLsizei count,  GLint* v) nogil
    cdef void  glUniform2f(GLint location, GLfloat x, GLfloat y) nogil
    cdef void  glUniform2fv(GLint location, GLsizei count,  GLfloat* v) nogil
    cdef void  glUniform2i(GLint location, GLint x, GLint y) nogil
    cdef void  glUniform2iv(GLint location, GLsizei count,  GLint* v) nogil
    cdef void  glUniform3f(GLint location, GLfloat x, GLfloat y, GLfloat z) nogil
    cdef void  glUniform3fv(GLint location, GLsizei count,  GLfloat* v) nogil
    cdef void  glUniform3i(GLint location, GLint x, GLint y, GLint z) nogil
    cdef void  glUniform3iv(GLint location, GLsizei count,  GLint* v) nogil
    cdef void  glUniform4f(GLint location, GLfloat x, GLfloat y, GLfloat z, GLfloat w) nogil
    cdef void  glUniform4fv(GLint location, GLsizei count,  GLfloat* v) nogil
    cdef void  glUniform4i(GLint location, GLint x, GLint y, GLint z, GLint w) nogil
    cdef void  glUniform4iv(GLint location, GLsizei count,  GLint* v) nogil
    cdef void  glUniformMatrix2fv(GLint location, GLsizei count, GLboolean transpose,  GLfloat* value) nogil
    cdef void  glUniformMatrix3fv(GLint location, GLsizei count, GLboolean transpose,  GLfloat* value) nogil
    cdef void  glUniformMatrix4fv(GLint location, GLsizei count, GLboolean transpose,  GLfloat* value) nogil
    cdef void  glUseProgram(GLuint program) nogil
    cdef void  glValidateProgram(GLuint program) nogil
    cdef void  glVertexAttrib1f(GLuint indx, GLfloat x) nogil
    cdef void  glVertexAttrib1fv(GLuint indx,  GLfloat* values) nogil
    cdef void  glVertexAttrib2f(GLuint indx, GLfloat x, GLfloat y) nogil
    cdef void  glVertexAttrib2fv(GLuint indx,  GLfloat* values) nogil
    cdef void  glVertexAttrib3f(GLuint indx, GLfloat x, GLfloat y, GLfloat z) nogil
    cdef void  glVertexAttrib3fv(GLuint indx,  GLfloat* values) nogil
    cdef void  glVertexAttrib4f(GLuint indx, GLfloat x, GLfloat y, GLfloat z, GLfloat w) nogil
    cdef void  glVertexAttrib4fv(GLuint indx,  GLfloat* values) nogil
    cdef void  glVertexAttribPointer(GLuint indx, GLint size, GLenum type, GLboolean normalized, GLsizei stride,  GLvoid* ptr) nogil
    cdef void  glViewport(GLint x, GLint y, GLsizei width, GLsizei height) nogil
